<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Praca_magisterska</string>
    <string name="title_section1">Management</string>
    <string name="title_section2">Inserts</string>
    <string name="title_section3">Updates</string>
    <string name="title_section4">Selects</string>
    <string name="title_section5">Deletes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Truncate all</string>
    
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="number"></string>
    <string name="losuj">Losuj</string>
    <string name="lotto">Lotto</string>
    <string name="kosci">Kości</string>
    <string name="execution_time">Execution time:</string>
    <string name="number_of_rows">Number of rows:</string>
    <string name="empty"></string>
   	<string name="Insert_button_1">Simple insert</string>
   	<string name="Insert_button_2">Simple insert transaction</string>
   	<string name="Insert_button_3">Bulk insert transaction</string>
   	<string name="Insert_button_4"></string>
   	<string name="Select_button_1">Simple select</string>
   	<string name="Select_button_2">Select with order by</string>
   	<string name="Select_button_3">Create index</string>
   	<string name="Select_button_4">Drop index</string>
   	<string name="Managment_button_1">Set active: TABLE_WITH_1_COLUMN</string>
   	<string name="Managment_button_2">Set active: TABLE_WITH_2_COLUMNS</string>
   	<string name="Managment_button_3">Set active: TABLE_WITH_5_COLUMNS</string>
   	<string name="Managment_button_4">Set active: SIMPLE_RELATION_TABLES</string>
   	<string name="Managment_button_5">Truncate selected table</string>
   	<string name="Update_button_1">Simple update</string>
    <string name="Update_button_2">Simple update in transaction</string>
    <string name="Delete_button_1">Simple delete</string>
    <string name="Delete_button_2">Simple delete in transaction</string>

</resources>
