<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal" >

    

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal|top"
        android:layout_row="1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Managment_button_1"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="7.5dp" />
    
    


    <Button
        android:id="@+id/Button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
       	android:layout_gravity="fill_horizontal|top"
        android:layout_row="3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Managment_button_2"
        android:layout_marginTop="7.5dp" 
        android:layout_marginBottom="7.5dp"  />
    


    <Button
        android:id="@+id/Button03"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:text="@string/Managment_button_3"
        android:layout_marginTop="7.5dp" 
        android:layout_marginBottom="7.5dp" />
    
        <Button
        android:id="@+id/Button04"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:text="@string/Managment_button_4"
        android:layout_marginTop="7.5dp" 
        android:layout_marginBottom="7.5dp" />
        
                <Button
        android:id="@+id/Button05"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="7"
        android:text="@string/Managment_button_5"
        android:layout_marginTop="7.5dp" 
        android:layout_marginBottom="7.5dp" />

</GridLayout>