<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="2"
    android:orientation="horizontal" >

    <Space
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:layout_column="1"/>
    
            <Space
        android:layout_width="80dp"
        android:layout_column="1"
 />
            
                        <Space
        android:layout_width="220dp"
        android:layout_column="0"
 />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_row="1"
        android:text="@string/number_of_rows"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/editText1"
        android:layout_width="80dp"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="1"
        android:ems="10"
        android:inputType="number" />

    <Space
        android:layout_height="15dp"
        android:layout_columnSpan="1" />

    <TextView
        android:id="@+id/textView02"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:text="@string/execution_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/Result"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="3"
        android:text="@string/empty"
        android:textColor="@color/red" />

    <Space
        android:layout_height="15dp"
        android:layout_columnSpan="1" />

    <Button
        android:id="@+id/button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal|top"
        android:layout_row="5"
        android:text="@string/Update_button_1"
        android:textSize="@dimen/buttons_text_size" />

    <Space
        android:layout_height="15dp"
        android:layout_columnSpan="1" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal|top"
        android:layout_row="7"
        android:text="@string/Update_button_2"
        android:textSize="@dimen/buttons_text_size" />

    <Space
        android:layout_height="15dp"
        android:layout_columnSpan="1" />




    
        <Space
        android:layout_width="80dp"
        android:layout_column="1"
 />

</GridLayout>