<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="horizontal" >
    <Space android:layout_width="198dp" android:layout_height="1dp" android:layout_column="0" android:layout_row="0"/>

    <Space
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="0"
        android:text="@string/Select_button_1"
        android:textSize="@dimen/buttons_text_size" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="left|center_vertical"
        android:layout_row="0"
        android:ems="10"
        android:text="@string/number_of_rows"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/Result1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left|bottom"
        android:layout_row="1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_column="3"
        android:layout_gravity="left|center_vertical"
        android:layout_row="0"
        android:ems="10"
        android:inputType="number" />

    <Space
        android:layout_width="1dp"
        android:layout_height="46dp"
        android:layout_column="0"
        android:layout_row="3" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="4"
        android:ems="10"
        android:text="@string/number_of_rows"
        android:textSize="12sp" />

    <Space
        android:layout_height="54dp"
        android:layout_column="0"
        android:layout_row="4" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="5"
        android:text="@string/execution_time"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_columnSpan="2"/>

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="3"
        android:layout_rowSpan="2"
        android:text="@string/Select_button_2"
        android:textSize="@dimen/buttons_text_size" />

    <Space
        android:layout_height="100dp"
        android:layout_column="1"
        android:layout_row="6" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="6"
        android:text="@string/Select_button_3"
        android:textSize="@dimen/buttons_text_size" />

    <TextView
        android:id="@+id/textView02"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:text="@string/execution_time"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_columnSpan="2"/>
    
        <TextView
        android:id="@+id/TextView03"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="left|center_vertical"
        android:layout_row="6"
        android:ems="10"
        android:text="@string/number_of_rows"
        android:textSize="12sp" />

    <Space
        android:layout_height="200dp"
        android:layout_column="1"
        android:layout_row="7" />

    <Space
        android:layout_width="100dp"
        android:layout_row="2" android:layout_column="3"/>

    <Space
        android:layout_width="100dp"
        android:layout_height="118dp"
        android:layout_row="8" android:layout_column="0"/>

</GridLayout>